--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -33,6 +33,44 @@
        url('../fonts/HelveticaNeueLTCom-BdCn.woff') format('woff');
 }
 
+
+@font-face {
+    font-family: 'LeagueGothicRegular';
+    src: url('/fonts/League_Gothic-webfont.eot');
+    src: url('/fonts/League_Gothic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/League_Gothic-webfont.woff') format('woff'),
+         url('/fonts/League_Gothic-webfont.ttf') format('truetype'),
+         url('/fonts/League_Gothic-webfont.svg#LeagueGothicRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+   font-family: "FrutigerNeue";
+   font-style: normal;
+   font-weight: normal;
+   src:url("http://fast.fonts.com/d/4510b370-f470-4a48-9e50-610e1eda0c0f.eot?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc");
+   src:url("http://fonts.com/d/4510b370-f470-4a48-9e50-610e1eda0c0f.eot?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc#iefix") format("embedded-opentype"),url("http://fast.fonts.com/d/dd178e8e-241c-40e4-8de9-517c03b90b59.woff?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc") format("woff"),url("http://fast.fonts.com/d/5c8447f4-b7e3-462a-87f2-b823e98d6da5.ttf?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc") format("truetype"),url("http://fast.fonts.com/d/22971d02-0160-4a1f-b7ea-5999e0509d35.svg?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc#svgFontName") format("svg");
+}
+
+
+@font-face {
+   font-family: "FrutigerNeueLight";
+   font-style: normal;
+   font-weight: normal;
+   src:url("http://fast.fonts.com/d/12d6929b-8b96-4898-b413-6bd6d0e2d0fb.eot?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc");
+   src:url("http://fonts.com/d/12d6929b-8b96-4898-b413-6bd6d0e2d0fb.eot?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc#iefix") format("embedded-opentype"),url("http://fast.fonts.com/d/a2afa464-03b1-4a6c-b5cb-3521a1cf94ba.woff?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc") format("woff"),url("http://fast.fonts.com/d/9aa255d9-7d3d-420a-bb79-2f91c4aed10f.ttf?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc") format("truetype"),url("http://fast.fonts.com/d/b755ea1d-fab9-4588-b7a8-31350efb38f9.svg?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc#svgFontName") format("svg");
+}
+
+@font-face {
+   font-family: "FrutigerNeueHeavy";
+   font-style: normal;
+   font-weight: normal;
+   src:url("http://fast.fonts.com/d/1d6e4042-aad3-4fa6-af81-27ae0c861c76.eot?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc");
+   src:url("http://fonts.com/d/1d6e4042-aad3-4fa6-af81-27ae0c861c76.eot?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc#iefix") format("embedded-opentype"),url("http://fast.fonts.com/d/30ecb82c-3596-4c99-a397-c7cab98b5359.woff?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc") format("woff"),url("http://fast.fonts.com/d/b1062a8f-11aa-4489-85ec-60f8a3762a52.ttf?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc") format("truetype"),url("http://fast.fonts.com/d/96389638-6a84-4b46-9ee6-a9b03fd09a23.svg?d44f19a684109620e484147ea690e818ee8d0f94c8efc5f31894b30255d761b9baed50f9f7bf286f78cb7d22838d1d51d956d04b899f396349fc66afa3141d12bd86108ae07dbc#svgFontName") format("svg");
+}
+
 /* -------------------------------- */
 /* Structure                        */
 /* -------------------------------- */
@@ -89,7 +127,7 @@ header {
             a {               
                display:block;
                text-align:center;  
-               font:18px "HelveticaNeueLtCn","HelveticaNeueW01-47LtCn 692686", Arial, sans-serif;                                             
+               font-size:18px;                                             
             }
             a:hover{                    
                text-decoration:none;
@@ -129,8 +167,7 @@ banner{
    }
    h2 {
       .text-shadow(0px, 0px, 8px, rgba(0, 0, 0, 1));
-      color: white;
-      font-family: "HelveticaNeueLtCn", "HelveticaNeueW01-47LtCn 692686", Helvetica, sans-serif;
+      color: white;      
       font-size: 32px;
       line-height: 30px;
       width: 600px;
@@ -292,11 +329,11 @@ footer {
 html, body {
   margin: 0px;
   padding: 0px;
-  font:16px "HelveticaNeueLtCn","HelveticaNeueW01-47LtCn 692686", Arial, sans-serif;
+  font:16px "FrutigerNeue", "HelveticaNeueLtCn","HelveticaNeueW01-47LtCn 692686", Arial, sans-serif;
 }
 
 small {
-  font:12px "HelveticaNeueLtCn","HelveticaNeueW01-47LtCn 692686",Arial,sans-serif;
+  font-size:12px;
 }
 
 p { text-align: justify; }
@@ -329,8 +366,7 @@ h3, h4, h5, h6 {
    color:#494949;
 }
 
-a {    
-   font-family:"HelveticaNeueLtCn","HelveticaNeueW01-47LtCn 692686", Arial, sans-serif;    
+a {      
    color:@primaryColor; 
    text-decoration:none;
    .transition;
