--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -315,7 +315,7 @@ footer {
 html, body {
   margin: 0px;
   padding: 0px;
-  font:16px "Helvetica Neue", "HelveticaNeueLtCn", Arial, sans-serif;
+  font:16px "LeagueGothicRegular", "HelveticaNeueLtCn", Arial, sans-serif;
 }
 
 small {
