--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -10,15 +10,9 @@
 }
 
 @font-face {
-  font-family: "HelveticaNeueLtCn";
+  font-family: "'HelveticaNeueLtCn'";
   src: url('../fonts/HelveticaNeueLTCom-LtCn.ttf') format('truetype'),  
        url('../fonts/HelveticaNeueLTCom-LtCn.woff') format('woff');
-}
-
-@font-face {
-  font-family: "HelveticaNeueLtCnO";
-  src: url('../fonts/HelveticaNeueLTCom-LtCnO.ttf') format('truetype'),  
-       url('../fonts/HelveticaNeueLTCom-LtCnO.woff') format('woff');
 }
 
 @font-face {
@@ -34,28 +28,6 @@
 }
 
 
-@font-face {
-    font-family: 'LeagueGothicRegular';
-    src: url('../fonts/League_Gothic-webfont.eot');
-    src: url('../fonts/League_Gothic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/League_Gothic-webfont.woff') format('woff'),
-         url('../fonts/League_Gothic-webfont.ttf') format('truetype'),
-         url('../fonts/League_Gothic-webfont.svg#LeagueGothicRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-
-@font-face {
-    font-family: 'Helvetica Neue';
-    src: url('../fonts/helveticaneue-webfont.eot');
-    src: url('../fonts/helveticaneue-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/helveticaneue-webfont.woff') format('woff'),
-         url('../fonts/helveticaneue-webfont.ttf') format('truetype'),
-         url('../fonts/helveticaneue-webfont.svg#LeagueGothicRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 
 /* -------------------------------- */
 /* Structure                        */
@@ -315,7 +287,7 @@ footer {
 html, body {
   margin: 0px;
   padding: 0px;
-  font:16px "LeagueGothicRegular", "HelveticaNeueLtCn", Arial, sans-serif;
+  font:16px "HelveticaNeueLtCn", Arial, sans-serif;
 }
 
 small {
@@ -362,8 +334,6 @@ a {
 a:hover{ color:@primaryColorHover; text-decoration:none; .text-shadow(0px, 0px, 8px, rgba(0, 0, 0, 0.15));}
 
 b, strong { font-family: "HelveticaNeueMdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; }
-
-i, em { font-family: "HelveticaNeueLtCnO", "HelveticaNeueW01-47LtCn 692686", Helvetica, sans-serif; }
 
 blockquote {
   border-left:1px solid #e5e5e5;
