--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-  font-family: "'HelveticaNeueLtCn'";
+  font-family: "HelveticaNeueLtCn";
   src: url('../fonts/HelveticaNeueLTCom-LtCn.ttf') format('truetype'),  
        url('../fonts/HelveticaNeueLTCom-LtCn.woff') format('woff');
 }
