--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -287,11 +287,11 @@ footer {
 html, body {
   margin: 0px;
   padding: 0px;
-  font:16px "HelveticaNeueLtCn", Arial, sans-serif;
+  font:18px "HelveticaNeueLtCn", Arial, sans-serif;
 }
 
 small {
-  font-size:12px;
+  font-size:80%;
 }
 
 p { text-align: justify; }
