--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -10,6 +10,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+        <meta name="google-translate-customization" content="6b8d269fcbc1b6d5-0fa0d030d26cbeaf-ga791899a89db06bb-16"
+        />
     </head>
     
     <body>
@@ -49,13 +51,14 @@
             <div class="super">
                 <div class="wrapper">
                     <div class="content left-side">
-                        <article>{{ content }}</article>                        
+                        <article>{{ content }}
+                        </article>
                     </div>
                     <div class="right-side">
                         <div class="widget">
                             <span class="gravatar">
-                                <img src="http://1.gravatar.com/avatar/13c12ed8bb09f191876ae217829b15ed?size=96" />
-                                Eu sou Sidney Lima Filho e aqui você saberá sobre quem eu sou e minhas ideias. Abaixo estão as redes sociais que participo e onde você pode me encontrar.
+                                <img src="http://1.gravatar.com/avatar/13c12ed8bb09f191876ae217829b15ed?size=96" />Eu sou Sidney Lima Filho e aqui você saberá sobre quem eu sou e minhas ideias. Abaixo estão
+                                as redes sociais que participo e onde você pode me encontrar.
                             </span>
                             <nav>
                                 <a href="javascript:;" target="_blank" class="button twitter" title="Pensamentos rápidos via Twitter."></a>
@@ -68,7 +71,6 @@
                                 <a href="javascript:;" target="_blank" class="button mail" title="Clique aqui para me enviar uma mensagem."></a>
                             </nav>
                         </div>
-                        
                         <div class="widget">
                             <h2>Li e Gostei
                             </h2>
@@ -157,16 +159,27 @@
                 </p>
             </div>
         </footer>
+        <div id="google_translate_element">
+        </div>
     </body>
 
 </html>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+            pageLanguage: 'pt',
+            includedLanguages: 'en',
+            layout: google.translate.TranslateElement.FloatPosition.TOP_RIGHT
+        }, 'google_translate_element');
+    }
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">        
+</script>
 <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">                                                                                                                                                
-    </script>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <!--[if IE]>
-    <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js">                                                                                                                                                
-    </script>
+    <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js"></script>
 <![endif]-->
 <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript">        
 </script>
@@ -200,7 +213,7 @@
         google.setOnLoadCallback(function feeds() {
 
             var user = {
-                name: "sidneylimafilho",                
+                name: "sidneylimafilho",
                 mail: "https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ",
                 twitter: "sidneylimafilho",
                 facebook: "sidneylimafilho",
@@ -229,7 +242,7 @@
 
 
 
-            /*
+/*
             // TWITTER
             $.getJSON("http://api.twitter.com/1/statuses/user_timeline.json?screen_name=" + user.twitter + "&callback=?", function(json) {
                 document.title = json[0].user.description + " - " + json[0].user.name;
@@ -281,26 +294,36 @@
             */
         });
 </script>
-
 <script type="text/html" id="tagsTemplate">
-<h2 class="post_title">{.{page.title}}
-</h2>
-<ul>
-
- <li class="archive_list">
-    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/%d/%y"}}</time>
-    <a class="archive_list_article_link" href='{.{post.url}}'>{.{post.title}}</a>
-    <p class="summary">
-       <span>{.{post.summary}}</span>
-       <ul class="tag_list">
-          {.% for tag in post.tags %}
-          <li class="inline archive_list">
-          <a class="tag_list_link" href="/tag/{.{ tag }}">{.{ tag }}</a>
-          </li>
-          {.%endfor%}
-       </ul>
-    </p>
- </li>
-
-</ul>
+< h2 class = "post_title" > {. {
+        page.title
+    }
+} < /h2>
+<ul>
+
+ <li class="archive_list">
+    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
+    <a class="
+archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
+    <p class="
+summary ">
+       <span>{.{post.summary}}</span>
+       <ul class="
+tag_list ">
+          {.% for tag in post.tags %}
+          <li class="
+inline archive_list ">
+          <a class="
+tag_list_link " href=" / tag / {. {
+        tag
+    }
+}
+">{.{ tag }}</a>
+          </li>
+          {.%endfor%}
+       </ul>
+    </p>
+ </li>
+
+</ul>
 </script>
