add google translator

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -35,6 +35,7 @@
                     </ul>
                 </menu>
             </div>
+            <div id="google_translate_element"></div>
         </header>
         <banner>
             <div class="wrapper">
@@ -159,8 +160,7 @@
                 </p>
             </div>
         </footer>
-        <div id="google_translate_element">
-        </div>
+        
     </body>
 
 </html>
