--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -53,6 +53,12 @@ header {
       margin: 0px;      
    }
 
+   #google_translate_element {
+      position: absolute;
+      top:0px;
+      right:0px;
+   }
+
    menu {
       float: right;
       margin: 0px;
