--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -24,7 +24,7 @@
                             <a href="/leituras" title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
                         </li>
                         <li>
-                            <a href="javascript:;" title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
+                            <a href="/artigos" title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
                         </li>
                         <li>
                             <a href="javascript:;" title="Eventos em que participei palestrando.">PALESTRAS</a>
