--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -52,7 +52,7 @@
             <div class="super">
                 <div class="wrapper">
                     <div class="content left-side">
-                        <article class="{{page.url}}">{{ content }}
+                        <article class="{{page.filename}}">{{ content }}
                         </article>
                     </div>
                     <div class="right-side">
