--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -188,6 +188,22 @@ section {
          }
       }
 
+      .page {
+
+          ul {
+            list-style-type: none;
+            padding-left: 90px;
+            position: relative;
+
+            li { padding-right: 10px; }
+
+            time {
+               position: absolute;
+               left: 0px;
+            }
+         }
+      }
+
       article {
          padding-right: 24px;        
       }
