--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -195,12 +195,18 @@ section {
             padding-left: 90px;
             position: relative;
 
-            li { padding-right: 10px; }
+            li { 
+               padding-right: 10px; 
 
-            time {
-               position: absolute;
-               left: 0px;
+               time {
+                  position: absolute;
+                  left: 0px;
+               }
+
+               span{}
             }
+
+            
          }
       }
 
