--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -203,7 +203,10 @@ section {
                   left: 0px;
                }
 
-               span{}
+               small{
+                  display: block;
+                  color:#444;
+               }
             }
 
             
