--- a/themes/default/css/base.less
+++ b/themes/default/css/base.less
@@ -1,6 +1,6 @@
 @base: #f938ab;
-@primaryColor: #591DC2; /* crimson: #DC143C */
-@primaryColorHover: crimson; /* purple: #800080 */
+@primaryColor: #6600CC; /* crimson: #DC143C */
+@primaryColorHover: #CC0066; /* purple: #800080 */
 
 
 
