--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -123,7 +123,7 @@ banner{
 
    h1 {
       .text-shadow(0px, 0px, 8px, rgba(255, 255, 0, 0.5));
-      color: @primaryColorHover;
+      color: @primaryColor;
       font-family: "HelveticaNeueBdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif;
       font-size: 16px;
       text-transform: uppercase;
@@ -362,7 +362,7 @@ a {
    .text-shadow(0px, 0px, 1px, rgba(0, 0, 0, 0.2));
 }
 
-a:hover{ color:@primaryColorHover; text-decoration:none; .text-shadow(0px, 0px, 3px, rgba(0, 0, 0, 0.13));}
+a:hover{ color:@primaryColorHover; text-decoration:underline; .text-shadow(0px, 0px, 3px, rgba(0, 0, 0, 0.13));}
 
 b, strong { font-family: "HelveticaNeueMdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; }
 
