--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -49,7 +49,7 @@ header {
       height: 50px;
       float: left;
       color: transparent;
-      background: url(../img/signature-logo-purple.png) no-repeat left center;
+      background: url(../img/signature-logo.png) no-repeat left center;
       margin: 0px;      
    }
 
@@ -93,8 +93,9 @@ header {
                text-align:center;  
                font-size:18px;                                             
             }
-            a:hover{                    
-               text-decoration:none;
+            a:hover, a.selected{                    
+               text-decoration: none;
+               border-top: 1px solid @primaryColorHover;
             }
          }
       }
