--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -95,7 +95,7 @@ header {
             }
             a:hover, a.selected{                    
                text-decoration: none;
-               border-top: 1px solid @primaryColorHover;
+               border-top: 1px solid @primaryColorHover;               
             }
          }
       }
@@ -363,7 +363,7 @@ a {
    .text-shadow(0px, 0px, 1px, rgba(0, 0, 0, 0.2));
 }
 
-a:hover{ color:@primaryColorHover; text-decoration:underline; .text-shadow(0px, 0px, 3px, rgba(0, 0, 0, 0.13));}
+a:hover, a.selected{ color:@primaryColorHover; text-decoration:underline; .text-shadow(0px, 0px, 3px, rgba(0, 0, 0, 0.13));}
 
 b, strong { font-family: "HelveticaNeueMdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; }
 
