--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -103,7 +103,7 @@ header {
 }
 
 
-banner{
+banner {
    position: relative;
    z-index: 1;
    padding-top:  100px;
@@ -144,24 +144,26 @@ section {
    background: url(../img/corner-shadow-top-left.png) #FFF no-repeat top left;   
    overflow:auto; /* fix bug background-color dont work */
 
-   .super{
+   .super {
       background: url(../img/corner-shadow-top-right.png) no-repeat top right;   
       overflow:auto; /* fix bug background-color dont work */
       width: 100%;
       padding-top: 24px;
    }
 
-   .left-side{
+   .left-side {
       width: 610px;
       float: left;
+      overflow: auto;
            
       article {
          padding-right: 24px;  
+         overflow: auto;
 
-         .post-wall{
+         .post-wall {
             padding: 0px;
 
-            li{
+            li {
                float: left;
                display: block;
                width: 280px;
@@ -177,12 +179,12 @@ section {
                   bottom:0px;               
                   padding: 5px;
                   width: 270px;               
-                  background-color: rgba(0, 0, 0, 0.50);
+                  background-color: rgba(0, 0, 0, 0.83);
                   color: #FFF;
                   opacity: 0;               
                   .transition(opacity, 400ms);
 
-                  small{ display: block; }
+                  small{ display: block; color: #CCC; }
                }            
             }
 
@@ -199,7 +201,7 @@ section {
             padding-left: 90px;
             position: relative;
 
-            li { 
+            li {                
                padding-right: 10px; 
 
                time {
@@ -216,18 +218,18 @@ section {
       }
    }
 
-   .right-side{
+   .right-side {
       width:250px;
       float: right;      
-      overflow: auto;
+      overflow: auto; /* fix bug height or boxing dont work */
 
-      .widget{
+      .widget {
          border: 1px solid #E5E5E5;
          background-color: white;
          position: relative;
          margin-bottom: 30px;   
 
-         .gravatar{
+         .gravatar {
             display: block;
             padding: 4px;
             font-size: 14px;
@@ -240,18 +242,18 @@ section {
             }
          }      
 
-         h2{
+         h2 {
             margin: 0px;
             padding: 12px 12px;
             background-color: #DDD;
          }
 
-         ul{
+         ul {
             padding: 0px 12px;
          }
 
         
-         .button{ 
+         .button { 
             display: table-cell; 
             width: 32px;
             height: 32px;
@@ -261,8 +263,8 @@ section {
             .opacity(0.5);
          }
 
-         .button:hover, .button:active{
-            .opacity(1)
+         .button:hover, .button:active {
+            .opacity(1);
          }
 
          .twitter { background-image: url(../img/twitter.png);  }
@@ -275,7 +277,7 @@ section {
          .mail { background-image: url(../img/mail.png);  }
       }
 
-      .widget::after{
+      .widget::after {
          content: '';
          position: absolute;
          height: 7px;
@@ -286,7 +288,7 @@ section {
       }
 
 
-      ul{
+      ul {
          list-style-type: none;
          padding: 0px;
 
@@ -294,7 +296,7 @@ section {
             padding: 3px 0px 7px 0px;
          }
 
-         small{ display: block;}         
+         small { display: block; }         
       }
    }
 }
@@ -362,7 +364,7 @@ a {
 
 a:hover, a.selected{ color:@primaryColorHover; text-decoration:underline; .text-shadow(0px, 0px, 3px, rgba(0, 0, 0, 0.13));}
 
-b, strong { font-family: "HelveticaNeueMdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; }
+b, strong { font-family: "HelveticaNeueMdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; font-weight: normal; }
 
 blockquote {
   border-left:1px solid #e5e5e5;
