--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -196,6 +196,7 @@ section {
       }
 
       article.page {
+         h1 { border-bottom: 1px solid black; }
          ul {
             list-style-type: none;
             padding-left: 90px;
