--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -40,6 +40,8 @@
             <div id="google_translate_element"></div>
         </header>
         <banner>
+            <a href="javascript:;" class="arrow-right"></a>
+            <a href="javascript:;" class="arrow-left"></a>
             <div class="wrapper">
                 <div class="banner1">
                     <h1>Aprenda como funciona
