--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -106,9 +106,9 @@ header {
 banner {
    position: relative;
    z-index: 1;
-   padding-top:  100px;
+   padding-top:  70px;
    display: block;
-   height: 300px;
+   height: 330px;
    background: url(../img/nurture_seedling_in_hands_low_level.jpg);
    background-repeat: no-repeat;
    background-size: cover;
@@ -137,6 +137,21 @@ banner {
       line-height: 30px;
       width: 600px;
    }
+
+   .arrow-left, .arrow-right {
+      position: absolute;
+      height: 330px;
+      width: 66px;
+      display: block;
+      overflow: auto;
+      .opacity(0.6);
+   }
+
+   .arrow-left:hover, .arrow-right:hover{ .opacity(1); }
+
+   .arrow-left { background: url(../img/arrow-left.png) no-repeat center; right: 0px; }
+
+   .arrow-right{ background: url(../img/arrow-right.png) no-repeat center; }
 }
 
 section {
