--- a/themes/default/css/base.less
+++ b/themes/default/css/base.less
@@ -1,5 +1,5 @@
 @base: #f938ab;
-@primaryColor: #6600CC; /* crimson: #DC143C */
+@primaryColor: #FF7700; /* crimson: #DC143C */
 @primaryColorHover: #CC0066; /* purple: #800080 */
 
 
