--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -21,23 +21,24 @@
                 <menu>
                     <ul>
                         <li>
-                            <a href="/leituras" {%if page.categories contains 'leituras'%}class="selected"{%endif%}
-                                title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
+                            <a href="/leituras" {%if page.categories contains 'leituras'%}class="selected" {%endif%} title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
                         </li>
                         <li>
-                            <a href="/artigos" {%if page.categories contains 'artigos'%}class="selected"{%endif%} 
-                            title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
+                            <a href="/artigos" {%if page.categories contains 'artigos'%}class="selected" {%endif%} title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
                         </li>
                         <li>
-                            <a href="/palestras" {%if page.categories contains 'palestras'%}class="selected"{%endif%} title="Eventos em que participei palestrando.">PALESTRAS</a>
+                            <a href="/palestras" {%if page.categories contains 'palestras'%}class="selected" {%endif%}
+                            title="Eventos em que participei palestrando.">PALESTRAS</a>
                         </li>
                         <li>
-                            <a href="/quem-e-sidney" {%if page.categories contains 'quem-e-sidney'%}class="selected"{%endif%} title="Um pequeno resumo de quem eu sou e porque você deveria acompanhar essa história.">QUEM É SIDNEY</a>
+                            <a href="/quem-e-sidney" {%if page.categories contains 'quem-e-sidney'%}class="selected" {%endif%}
+                            title="Um pequeno resumo de quem eu sou e porque você deveria acompanhar essa história.">QUEM É SIDNEY</a>
                         </li>
                     </ul>
                 </menu>
             </div>
-            <div id="google_translate_element"></div>
+            <div id="google_translate_element">
+            </div>
         </header>
         <banner>
             <a href="javascript:;" class="arrow-right"></a>
@@ -70,6 +71,8 @@
                                 <a href="javascript:;" target="_blank" class="button facebook" title="Minha vida social no Facebook."></a>
                                 <a href="javascript:;" target="_blank" class="button linkedin" title="Minha rede profissional no Linkedin."></a>
                                 <a href="javascript:;" target="_blank" class="button feed" title="Assine meus posts com o RSS."></a>
+                            </nav>
+                            <nav>
                                 <a href="javascript:;" target="_blank" class="button slideshare" title="Veja meus slides no Slideshare."></a>
                                 <a href="javascript:;" target="_blank" class="button github" title="O que desenvolvo e coloco no Github."></a>
                                 <a href="javascript:;" target="_blank" class="button youtube" title="Filmes que assisto via Youtube."></a>
@@ -164,7 +167,6 @@
                 </p>
             </div>
         </footer>
-        
     </body>
 
 </html>
@@ -180,10 +182,12 @@
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">        
 </script>
 <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">
+    </script>
 <![endif]-->
 <!--[if IE]>
-    <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js"></script>
+    <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js">
+    </script>
 <![endif]-->
 <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript">        
 </script>
@@ -302,32 +306,32 @@
 < h2 class = "post_title" > {. {
         page.title
     }
-} < /h2>
-<ul>
-
- <li class="archive_list">
-    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
+} < /h2>
+<ul>
+
+ <li class="archive_list">
+    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
     <a class="
-archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
+archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
     <p class="
-summary ">
-       <span>{.{post.summary}}</span>
+summary ">
+       <span>{.{post.summary}}</span>
        <ul class="
-tag_list ">
-          {.% for tag in post.tags %}
+tag_list ">
+          {.% for tag in post.tags %}
           <li class="
-inline archive_list ">
+inline archive_list ">
           <a class="
 tag_list_link " href=" / tag / {. {
         tag
     }
 }
-">{.{ tag }}</a>
-          </li>
-          {.%endfor%}
-       </ul>
-    </p>
- </li>
-
-</ul>
+">{.{ tag }}</a>
+          </li>
+          {.%endfor%}
+       </ul>
+    </p>
+ </li>
+
+</ul>
 </script>
