--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -39,8 +39,10 @@ header, banner, section, footer {
 
 header {  
    position:absolute;   
-   background-color: rgba(255, 255, 255, 0.75);
-   padding: 10px 0px;
+   background-color: rgba(255, 255, 255, 0.65);
+   border-bottom: 1px solid rgba(255, 255, 255, 0.80);
+   /*.gradient(left top, left bottom, 0.95, rgba(255, 255, 255, 0.75), 1,  rgba(255, 255, 255, 0));*/
+   padding: 4px 0px;
    z-index: 1000; /* cause banner position relative stay hover on the header */
 
    .signature {
@@ -92,7 +94,7 @@ header {
                display:block;
                text-align:center;  
                font-size:18px;  
-               color: #999;    
+               color: #696B33;    
                .text-shadow(0px, 0px, 0px, rgba(0, 0, 0, 0));                                       
             }
             /*a:hover, a.selected{                    
