--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -21,6 +21,10 @@
                 <menu>
                     <ul>
                         <li>
+                            <a href="/quem-e-sidney" {%if page.categories contains 'quem-e-sidney'%}class="selected" {%endif%}
+                            title="Um pequeno resumo de quem eu sou e porque você deveria acompanhar essa história.">QUEM É SIDNEY</a>
+                        </li>
+                        <li>
                             <a href="/leituras" {%if page.categories contains 'leituras'%}class="selected" {%endif%} title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
                         </li>
                         <li>
@@ -31,8 +35,8 @@
                             title="Eventos em que participei palestrando.">PALESTRAS</a>
                         </li>
                         <li>
-                            <a href="/quem-e-sidney" {%if page.categories contains 'quem-e-sidney'%}class="selected" {%endif%}
-                            title="Um pequeno resumo de quem eu sou e porque você deveria acompanhar essa história.">QUEM É SIDNEY</a>
+                            <a href="/contato" {%if page.categories contains 'contato'%}class="selected" {%endif%}
+                            title="O canal mais rápido para falar comigo depois do telefone.">CONTATO</a>
                         </li>
                     </ul>
                 </menu>
@@ -40,7 +44,7 @@
             <div id="google_translate_element">
             </div>
         </header>
-        <banner {% if page.categories %} class="{{page.categories}}"{% endif %}>
+        <banner {% if page.categories %} class="{{page.categories}}" {% endif %}>
             <a href="javascript:;" class="arrow-right"></a>
             <a href="javascript:;" class="arrow-left"></a>
             <div class="wrapper">
@@ -57,7 +61,7 @@
             <div class="super">
                 <div class="wrapper">
                     <div class="content left-side">
-                        <article {% if page.categories %} class="{{page.categories}}"{% endif %}>{{ content }}
+                        <article {% if page.categories %} class="{{page.categories}}" {% endif %}>{{ content }}
                         </article>
                     </div>
                     <div class="right-side">
@@ -182,11 +186,11 @@
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">        
 </script>
 <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">    
     </script>
 <![endif]-->
 <!--[if IE]>
-    <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js">
+    <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js">    
     </script>
 <![endif]-->
 <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript">        
@@ -306,32 +310,32 @@
 < h2 class = "post_title" > {. {
         page.title
     }
-} < /h2>
-<ul>
-
- <li class="archive_list">
-    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
+} < /h2>
+<ul>
+
+ <li class="archive_list">
+    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
     <a class="
-archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
+archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
     <p class="
-summary ">
-       <span>{.{post.summary}}</span>
+summary ">
+       <span>{.{post.summary}}</span>
        <ul class="
-tag_list ">
-          {.% for tag in post.tags %}
+tag_list ">
+          {.% for tag in post.tags %}
           <li class="
-inline archive_list ">
+inline archive_list ">
           <a class="
 tag_list_link " href=" / tag / {. {
         tag
     }
 }
-">{.{ tag }}</a>
-          </li>
-          {.%endfor%}
-       </ul>
-    </p>
- </li>
-
-</ul>
+">{.{ tag }}</a>
+          </li>
+          {.%endfor%}
+       </ul>
+    </p>
+ </li>
+
+</ul>
 </script>
