--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -210,31 +210,31 @@ section {
                opacity: 1;
                color: #FFF;
             }
-         }      
-      }
+         }   
 
-      article.page {
-         h1 { border-bottom: 1px solid black; }
-         ul {
-            list-style-type: none;
-            padding-left: 90px;
-            position: relative;
+         .artigos, .palestras {
+            h1 { border-bottom: 1px solid black; }
+            ul {
+               list-style-type: none;
+               padding-left: 90px;
+               position: relative;
 
-            li {                
-               padding-right: 10px; 
+               li {                
+                  padding-right: 10px; 
 
-               time {
-                  position: absolute;
-                  left: 0px;
-               }
+                  time {
+                     position: absolute;
+                     left: 0px;
+                  }
 
-               small{
-                  display: block;
-                  color:#444;
-               }
-            }            
-         }
-      }
+                  small{
+                     display: block;
+                     color:#444;
+                  }
+               }            
+            }
+         }   
+      }      
    }
 
    .right-side {
