change H1, H2, H3, at others headings

--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -337,12 +337,14 @@ footer {
 html, body {
   margin: 0px;
   padding: 0px;
-  font:18px "HelveticaNeueLtCn", Arial, sans-serif;
+  font: 16px "HelveticaNeueLtCn", Arial, sans-serif;
+  color: #666;
 }
 
 small {
   font-size:80%;
 }
+
 
 p { text-align: justify; }
 
@@ -350,6 +352,7 @@ h1, h2, h3, h4, h5, h6 {
    font-family: "HelveticaNeueThCn", "HelveticaNeueW01-ThinCn 673383", Arial, sans-serif;
    font-weight: normal;  
    .text-shadow(0px, 0px, 8px, rgba(0, 0, 0, 0));
+   color: #000;
 }
 
 p, ul, ol, table, h1, h2, h3, h4, h5, h6, pre, dl {
@@ -361,18 +364,18 @@ h1, h2, h3 {
 }
 
 h1 {
-   font-size: 34px;
-   color:#333;
+   font-size: 51px;   
 }
 
 h2 {
-   font-size: 24px;
-   color:#393939;
+   font-size: 34px;   
 }
 
-h3, h4, h5, h6 {
-   color:#494949;
+h3 {
+   font-size: 24px;   
 }
+
+h3, h4, h5, h6 {}
 
 a {      
    color:@primaryColor; 
