update fonts to css H1

--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -364,7 +364,8 @@ h1, h2, h3 {
 }
 
 h1 {
-   font-size: 51px;   
+   font-size: 40px; 
+   font-family: "HelveticaNeueBdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; font-weight: normal;  
 }
 
 h2 {
@@ -393,7 +394,7 @@ a:hover, a.selected{
    background: url(../img/anchor-bg.png) no-repeat 0px 100%;
 }
 
-b, strong { font-family: "HelveticaNeueMdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; font-weight: normal; }
+b, strong { font-family: "HelveticaNeueBdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; font-weight: normal; }
 
 blockquote {
   border-left:1px solid #e5e5e5;
