add border bottom in H2

--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -215,6 +215,8 @@ section {
          }   
 
          .artigos, .palestras {
+
+            h2 { border-bottom: 1px solid black; }
             
             ul {
                list-style-type: none;
