--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -45,8 +45,8 @@
             </div>
         </header>
         <banner {% if page.categories %} class="{{page.categories}}" {% endif %}>
-            <a href="javascript:;" class="arrow-right"></a>
-            <a href="javascript:;" class="arrow-left"></a>
+            <!-- <a href="javascript:;" class="arrow-right"></a>
+            <a href="javascript:;" class="arrow-left"></a> -->
             <div class="wrapper">
                 <div class="excerpt">
                     <h1>Aprenda como funciona
@@ -311,32 +311,127 @@
 < h2 class = "post_title" > {. {
         page.title
     }
-} < /h2>
-<ul>
-
- <li class="archive_list">
-    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
+} < /h2>
+
+
+
+
+
+<ul>
+
+
+
+
+
+
+
+
+
+
+
+ <li class="archive_list">
+
+
+
+
+
+    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
+
+
+
+
+
     <a class="
-archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
+archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
+
+
+
+
+
     <p class="
-summary ">
-       <span>{.{post.summary}}</span>
+summary ">
+
+
+
+
+
+       <span>{.{post.summary}}</span>
+
+
+
+
+
        <ul class="
-tag_list ">
-          {.% for tag in post.tags %}
+tag_list ">
+
+
+
+
+
+          {.% for tag in post.tags %}
+
+
+
+
+
           <li class="
-inline archive_list ">
+inline archive_list ">
+
+
+
+
+
           <a class="
 tag_list_link " href=" / tag / {. {
         tag
     }
 }
-">{.{ tag }}</a>
-          </li>
-          {.%endfor%}
-       </ul>
-    </p>
- </li>
-
-</ul>
+">{.{ tag }}</a>
+
+
+
+
+
+          </li>
+
+
+
+
+
+          {.%endfor%}
+
+
+
+
+
+       </ul>
+
+
+
+
+
+    </p>
+
+
+
+
+
+ </li>
+
+
+
+
+
+
+
+
+
+
+
+</ul>
+
+
+
+
+
 </script>
