--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -83,7 +83,7 @@
                                 <a href="javascript:;" target="_blank" class="button mail" title="Clique aqui para me enviar uma mensagem."></a>
                             </nav>
                         </div>
-                        <div class="widget bookmarks">{% include default-bookmarks.htm %}
+                        <div class="widget bookmarks">{% include _layouts/default-bookmarks.htm %}
                         </div>
                     </div>
                 </div>
