--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -35,6 +35,10 @@
                             title="Eventos em que participei palestrando.">PALESTRAS</a>
                         </li>
                         <li>
+                            <a href="/life-list" {%if page.categories contains 'life-list'%}class="selected" {%endif%}
+                            title="Uma lista de coisas que acho imprescindível realizar antes de morrer.">LIFE LIST</a>
+                        </li>
+                        <li>
                             <a href="/contato" {%if page.categories contains 'contato'%}class="selected" {%endif%} title="O canal mais rápido para falar comigo depois do telefone.">CONTATO</a>
                         </li>
                     </ul>
